--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="./style.css">
 	<title>GetItDone</title>
 </head>
 <body>
-	<header>Black</header>
+	<header>
+		<div id=logo class=topbar><h1>GetItDone</h1></div>
+		<div id=about class=topbar><h1><a href='https://google.com'>About Us</a></h1></div>
+	</header>
 	
 </body>
 </html>
