Added body background color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div id=logo class=topbar><h3>GetItDone</h3></div>
-		<div id=about class=topbar><h3><a href='https://google.com'>About Us</a></h3></div>
+		<div id=about class=topbar><h3><a href='https://google.com' style="text-decoration: none; color: inherit;">About Us</a></h3></div>
 	</header>
 	
 </body>
