--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
 	<title>GetItDone</title>
 </head>
 <body>
-	<header>
-		<div id=logo class=topbar><h3>GetItDone</h3></div>
-		<div id=about class=topbar><h3><a href='https://google.com' style="text-decoration: none; color: inherit;">About Us</a></h3></div>
-	</header>
 	
+		<div class="main">
+			<div class="sidebar">
+				<div class="logo">
+					GetItDone
+				</div>
+				<div class="menu-bar"></div>
+			</div>
+			<div class="content">
+				<div class="header"></div>
+				<div class="container"></div>
+			</div>
+
+		</div>		
 </body>
 </html>
