changes in UI, now in a different style

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 	<title>GetItDone</title>
 </head>
 <body>
-	
-		<div class="main">
-			<div class="sidebar">
-				<div class="logo">
-					GetItDone
-				</div>
-				<div class="menu-bar"></div>
-			</div>
-			<div class="content">
-				<div class="header"></div>
-				<div class="container"></div>
+	<div class="main">
+		<div class="header">
+		</div>
+		<div class="container">
+			<div class="to-do-list">
+				<div class="task-card">Hi This is Barricade here. How are you?</div>
+				<div class="task-card">Hi This is Barricade here. How are you?</div>
+				<div class="task-card">Hi This is Barricade here. How are you?</div>
+				<div class="task-card">Hi This is Barricade here. How are you?</div>				
 			</div>
 
-		</div>		
+
+		</div>	
+	</div>		
 </body>
 </html>
