changed div.header to header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,13 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<title>GetItDone</title>
 </head>
+
 <body>
+	<header>
+		<p>GETITDONE</p>
+	</header>
+
 	<div class="main">
-		<div class="header">
-			<p>GETITDONE</p>
-		</div>
 		<div class="container">
 			<div class="to-do-list">
 				<div class="task-card">
@@ -45,11 +48,12 @@
 					<i class="fa fa-plus"></i>
 				</button>
 			</div>
-		</div>	
-	</div>	
+		</div>
+	</div>
 	
 	<footer>
 		<p>&copy;Made By Deathgod & Barricade</p>
 	</footer>
 </body>
+
 </html>
